# AI4DrugDesign_Spring2026

./: .gitignore  README.md  app.py  pyproject.toml
.claude/: settings.local.json
docs/: compound_optimization.md  molecular_docking.md  tab_overview.md
tabs/: chat.py  compound_evaluation.py  compound_optimization.py  compound_visualization.py  docking_preparation.py  molecular_docking.py  protein_analysis.py  protein_image_tab.py
